infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: vl037/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  # type: ClusterIP # could be excluded since it's the default 
  selector:
    app: client # matches template.metadata.lables
  ports:
    - name: client # only for logging purpose
      protocol: TCP
      port: 3000 # port for ClusterIP Service, could be random
      targetPort: 3000 # our container port

# kubectl apply -f [xxx].yaml
# kubectl rollout restart deployment [depl_name]
