infra/k8s/comments-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: vl037/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  # type: ClusterIP # could be excluded since it's the default 
  selector:
    app: comments # matches template.metadata.lables
  ports:
    - name: comments # only for logging purpose
      protocol: TCP
      port: 4001 # port for ClusterIP Service, could be random
      targetPort: 4001 # our container port

# kubectl apply -f [xxx].yaml
# kubectl rollout restart deployment [depl_name]
