infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: vl037/moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  # type: ClusterIP # could be excluded since it's the default 
  selector:
    app: moderation # matches template.metadata.lables
  ports:
    - name: moderation # only for logging purpose
      protocol: TCP
      port: 4003 # port for ClusterIP Service, could be random
      targetPort: 4003 # our container port

# kubectl apply -f [xxx].yaml
# kubectl rollout restart deployment [depl_name]
